--- a/pom.xml
+++ b/pom.xml
@@ -123,6 +123,13 @@
 					<target>1.8</target>
 				</configuration>
 			</plugin>
+			<plugins>
+<plugin>
+<groupId>org.apache.maven.plugins</groupId>
+<artifactId>maven-surefire-plugin</artifactId>
+<version>2.19.1</version>
+</plugin>
+</plugins>
 		</plugins>
 	</build>
 
